--- a/M18BatteryInfo.csproj
+++ b/M18BatteryInfo.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.IO.Ports" Version="10.0.1" />
+    <PackageReference Include="FTD2XX.Net" Version="1.0.15" />
     <PackageReference Include="System.Management" Version="10.0.1" />
   </ItemGroup>
 
