--- a/M18BatteryInfo.csproj
+++ b/M18BatteryInfo.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.Management" Version="10.0.1" />
+    <PackageReference Include="System.IO.Ports" Version="10.0.1" />
   </ItemGroup>
 
   <ItemGroup>
